--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div id="get-started">
-                    <h1>Velkommen til malerfirmakøbenhavn</h1>
+                    <h1 class="display-3">Velkommen til malerfirmakøbenhavn</h1>
                     <hr>
                     <form method="GET" action="/infoPage.html">
                         <button type="submit" class="btn btn-outline-dark">Get Started!</button>
